# StockTrak

./: .gitignore  CHANGELOG.md  Makefile  PRICING.md  README.md  RUN.md  build_exe.py  entry.py  main.py  pyproject.toml  run_portfolio.py
portfolio_tool/: __init__.py  __main__.py  _rich_compat.py  config.py  logging_utils.py
portfolio_tool/app/: cli.py
portfolio_tool/core/: __init__.py  brokerage.py  cgt.py  config.py  diagnostics.py  lots.py  models.py  pricing.py  reports.py  rules.py  services.py  trades.py
portfolio_tool/data/: __init__.py  init_db.py  models.py  repo.py  repo_base.py  repo_json.py  repo_sqlite.py
portfolio_tool/providers/: alphavantage_provider.py  fallback_provider.py  marketindex_provider.py  yahooquery_provider.py  yfinance_provider.py
portfolio_tool/reports/: __init__.py  csv_renderer.py  md_renderer.py  tables.py
portfolio_tool/tests/: conftest.py  test_brokerage.py  test_cgt.py  test_cli_smoke.py  test_lots.py  test_markdown.py  test_performance.py  test_pricing.py  test_reports_golden.py  test_repositories.py  test_rules.py  test_run_portfolio.py  test_services.py  test_tui.py  test_ui_smoke.py  test_yfinance_provider.py
scripts/: gen_synth_50k.py  run_tui.sh  seed_demo.py
sqlalchemy/: __init__.py  _simple.py  orm.py
tests/: test_bootstrap_status.py  test_cli_add_trade.py  test_header_widget.py  test_price_status.py  test_trade_lot_creation.py
typer/: __init__.py  testing.py
ui/: events.py  textual_app.py  theme.tcss
ui/views/: actionables.py  cgt_calendar.py  dashboard.py  lots.py  positions.py
ui/widgets/: header.py  (+5 more)
(+34 files in other folders)
