[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "portfolio-tool"
version = "0.0.1"
description = "Terminal-based portfolio management tool"
authors = [{name = "StockTrak Team"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.9",
    "tomli-w>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[project.scripts]
portfolio = "portfolio_tool.app.cli:app"

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"

